@@ -2,12 +2,16 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.tresamigos</groupId>
   <artifactId>smv</artifactId>
-  <version>1.3-SNAPSHOT</version>
+  <version>1.5-SNAPSHOT</version>
   <name>Spark Modularized View</name>
   <packaging>jar</packaging>
   <inceptionYear>2014</inceptionYear>
   <properties>
-      <scala.version>2.10.4</scala.version>
+    <scala.version>2.10.4</scala.version>
+    <scala.binary.version>2.10</scala.binary.version>
+    <scala.compat.version>${scala.binary.version}</scala.compat.version>
+    <spark.version>1.5.1</spark.version>
+    <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
   </properties>
 
   <repositories>
@@ -34,19 +38,13 @@
   <dependencies>
     <dependency> <!-- Spark dependency -->
       <groupId>org.apache.spark</groupId>
-      <artifactId>spark-core_2.10</artifactId>
-      <version>1.3.0</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency> <!-- Spark dependency -->
-      <groupId>org.apache.spark</groupId>
-      <artifactId>spark-sql_2.10</artifactId>
-      <version>1.3.0</version>
+      <artifactId>spark-sql_${scala.binary.version}</artifactId>
+      <version>${spark.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.scalatest</groupId>
-      <artifactId>scalatest_2.10</artifactId>
+      <artifactId>scalatest_${scala.binary.version}</artifactId>
       <version>2.2.0</version>
       <scope>test</scope>
     </dependency>
@@ -57,7 +55,7 @@
     </dependency>
     <dependency>
       <groupId>org.rogach</groupId>
-      <artifactId>scallop_2.10</artifactId>
+      <artifactId>scallop_${scala.binary.version}</artifactId>
       <version>0.9.5</version>
     </dependency>
     <dependency>
@@ -72,12 +70,12 @@
     </dependency>
     <dependency> <!-- for string matching -->
       <groupId>com.rockymadden.stringmetric</groupId>
-      <artifactId>stringmetric-core_2.10</artifactId>
+      <artifactId>stringmetric-core_${scala.binary.version}</artifactId>
       <version>0.27.2</version>
     </dependency>
     <dependency> <!-- for ascii dependency graph -->
       <groupId>com.github.mdr</groupId>
-      <artifactId>ascii-graphs_2.10</artifactId>
+      <artifactId>ascii-graphs_${scala.binary.version}</artifactId>
       <version>0.0.6</version>
     </dependency>
   </dependencies>
@@ -88,7 +86,7 @@
         <plugin>
           <groupId>net.alchim31.maven</groupId>
           <artifactId>scala-maven-plugin</artifactId>
-          <version>3.1.6</version>
+          <version>3.2.1</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -161,6 +159,8 @@
           <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
           <junitxml>.</junitxml>
           <filereports>WDF TestSuite.txt</filereports>
+          <!-- since akka remoting keep staring for each suite, need a larger memory here -->
+          <argLine>-XX:MaxPermSize=256m</argLine>
         </configuration>
         <executions>
           <execution>
@@ -176,6 +176,7 @@
         <plugin>
             <artifactId>exec-maven-plugin</artifactId>
             <groupId>org.codehaus.mojo</groupId>
+            <version>1.4.0</version>
             <executions>
                 <execution>
                     <id>gen-user-guide</id>
@@ -302,6 +303,7 @@
                     <plugin>
                         <artifactId>exec-maven-plugin</artifactId>
                         <groupId>org.codehaus.mojo</groupId>
+                        <version>1.4.0</version>
                         <executions>
                             <execution>
                                 <id>run-sample-app</id>
